--- a/form.html
+++ b/form.html
@@ -7,56 +7,68 @@
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body class="form-page">
     <header class="main-header">
-      <nav class="main-header__navigation main-header__navigation--opened">
-        <ul class="main-header__list">
-          <li class="main-header__item"><a class="main-header__item-link" href="index.html">Главная</a></li>
-          <li class="main-header__item"><a class="main-header__item-link" href="photo.html">Фото и видео</a></li>
-          <li class="main-header__item"><a class="main-header__item-link" href="#">Форма отзыва</a></li>
-          <li class="main-header__item"><a class="main-header__item-link" href="#">HTML Academy</a></li>
-        </ul>
-        <button class="main-header__toggle" type="button">Закрыть</button>
-        <a class="main-header__logo-wrap">
-          <img class="main-header__logo" src="img/logo-sedona-mobile.svg" alt="City Sedona" width="102" height="83">
-        </a>
-      </nav>
-      <div class="main-header__promo-view promo__view">
+      <div class="main-header__wrap">
+        <nav class="main-header__navigation main-header__navigation--opened">
+          <ul class="main-header__list">
+            <li class="main-header__item"><a class="main-header__item-link" href="index.html">Главная</a></li>
+            <li class="main-header__item"><a class="main-header__item-link" href="photo.html">Фото и видео</a></li>
+            <li class="main-header__item"><a class="main-header__item-link">Форма отзыва</a></li>
+            <li class="main-header__item"><a class="main-header__item-link" href="#">HTML Academy</a></li>
+          </ul>
+          <button class="main-header__toggle" type="button">Закрыть</button>
+          <a class="main-header__logo-wrap">
+            <img class="main-header__logo" src="img/logo-sedona-mobile.svg" alt="City Sedona" width="102" height="83">
+          </a>
+        </nav>
+        <div class="main-header__promo-view promo__view">
         <div class="promo-view__slogan-layout">
           <img class="promo-view__logo-title" src="img/text-sedona.svg" alt="Sedona" width="280" height="47">
         </div>
       </div>
+      </div>
     </header>
     <section class="explanation">
-      <h2 class="explanation__title">Оставьте свой отзыв</h2>
-      <p class="explanation__about">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
+      <div class="explanation__wrap">
+        <h2 class="explanation__title">Оставьте свой отзыв</h2>
+        <p class="explanation__about">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
+      </div>
     </section>
     <form class="form" method="get" action="https://echo.htmlacademy.ru/">
       <div class="form__person person">
-        <h2 class="person__title">Представьтесь:</h2>
-        <label class="person__label">
-          <span class="person__label-text">Имя*:</span>
-          <input class="person__input" type="text" placeholder="Петр" name="name-first">
-        </label>
-        <label class="person__label">
-          <span class="person__label-text">Фамилия*:</span>
-          <input class="person__input" type="text" placeholder="Иванов" name="name-mid">
-        </label>
-        <label class="person__label">
-          <span class="person__label-text">Отчество</span>
-          <input class="person__input" type="text" placeholder="Александрович" name="name-last">
-        </label>
+        <div class="person__wrap">
+          <h2 class="person__title">Представьтесь:</h2>
+          <div class="person__label-wrap">
+            <label class="person__label">
+              <span class="person__label-text">Имя*:</span>
+              <input class="person__input" type="text" placeholder="Петр" name="name-first">
+            </label>
+            <label class="person__label">
+              <span class="person__label-text">Фамилия*:</span>
+              <input class="person__input" type="text" placeholder="Иванов" name="name-mid">
+            </label>
+            <label class="person__label">
+              <span class="person__label-text">Отчество</span>
+              <input class="person__input" type="text" placeholder="Александрович" name="name-last">
+            </label>
+          </div>
+        </div>
       </div>
       <div class="form__contact-inf contact-inf">
-        <h2 class="contact-inf__title">Контактная информация:</h2>
-        <label class="contact-inf__label">
-          <span class="contact-inf__label-text">Контактный телефон*:</span>
-          <input class="contact-inf__input" type="text" placeholder="Введите телефон" name="tel">
-        </label>
-        <label class="contact-inf__label">
-          <span class="contact-inf__label-text">Электронная почта*:</span>
-          <input class="contact-inf__input" type="email" placeholder="Введите e-mail" name="email">
-        </label>
+        <div class="contact-inf__wrap">
+          <h2 class="contact-inf__title">Контактная информация:</h2>
+          <div class="contact-inf__labl-wap">
+            <label class="contact-inf__label">
+              <span class="contact-inf__label-text">Контактный телефон*:</span>
+              <input class="contact-inf__input" type="text" placeholder="Введите телефон" name="tel">
+            </label>
+            <label class="contact-inf__label">
+              <span class="contact-inf__label-text">Электронная почта*:</span>
+              <input class="contact-inf__input" type="email" placeholder="Введите e-mail" name="email">
+            </label>
+          </div>
+        </div>
       </div>
       <div class="form__impression impression">
         <h2 class="impression__title">Ваше впечатление:</h2>
