--- a/index.html
+++ b/index.html
@@ -9,40 +9,45 @@
   </head>
   <body>
     <header class="main-header">
-      <nav class="main-header__navigation main-header__navigation--opened">
-        <ul class="main-header__list">
-          <li class="main-header__item"><a class="main-header__item-link">Главная</a></li>
-          <li class="main-header__item"><a class="main-header__item-link" href="photo.html">Фото и видео</a></li>
-          <li class="main-header__item"><a class="main-header__item-link" href="form.html">Форма отзыва</a></li>
-          <li class="main-header__item"><a class="main-header__item-link" href="#">HTML Academy</a></li>
-        </ul>
-        <button class="main-header__toggle" type="button">Закрыть</button>
-        <a class="main-header__logo-wrap">
-          <img class="main-header__logo" src="img/logo-sedona-mobile.svg" alt="City Sedona" width="102" height="83">
-        </a>
-      </nav>
-      <div class="main-header__promo-view promo__view">
+      <div class="main-header__wrap">
+        <nav class="main-header__navigation main-header__navigation--opened">
+          <ul class="main-header__list">
+            <li class="main-header__item"><a class="main-header__item-link">Главная</a></li>
+            <li class="main-header__item"><a class="main-header__item-link" href="photo.html">Фото и видео</a></li>
+            <li class="main-header__item"><a class="main-header__item-link" href="form.html">Форма отзыва</a></li>
+            <li class="main-header__item"><a class="main-header__item-link" href="#">HTML Academy</a></li>
+          </ul>
+          <button class="main-header__toggle" type="button">Закрыть</button>
+          <a class="main-header__logo-wrap">
+            <img class="main-header__logo" src="img/logo-sedona-mobile.svg" alt="City Sedona" width="102" height="83">
+          </a>
+        </nav>
+        <div class="main-header__promo-view promo__view">
         <div class="promo-view__slogan-layout">
           <img class="promo-view__logo-title" src="img/text-sedona.svg" alt="Sedona" width="280" height="47">
         </div>
       </div>
+      </div>
     </header>
     <div class="main-title">
-      <div class="main-titile__wrap">
+      <div class="main-title__wrap">
         <h1 class="main-title__title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
         <p class="main-title__reason">Рассмотрим 5 причин, по которым седона круче чем гранд каньон!</p>
       </div>
     </div>
     <section class="features-place">
-      <div class="features-place__head-wrap">
-        <header class="features-place__head">
-          <h2 class="features-place__title">Настоящий городок</h2>
-          <span class="features-place__number-features">- №1 -</span>
-          <p class="features-place__about-features">Седона не атракцион для туристов, там течет своя жизнь</p>
-        </header>
-        <div class="features-place__image-layout">City</div>
-      </div>
-      <div class="features-place__entertainment">
+      <div class="features-place__wrap">
+        <div class="features-place__head-wrap">
+          <div class="features-place__head-layout">
+            <header class="features-place__head">
+            <h2 class="features-place__title">Настоящий городок</h2>
+            <span class="features-place__number-features">- №1 -</span>
+            <p class="features-place__about-features">Седона не атракцион для туристов, там течет своя жизнь</p>
+          </header>
+          </div>
+          <div class="features-place__image-layout">City</div>
+        </div>
+        <div class="features-place__entertainment">
         <div class="features-place__entertainment-item-layout">
           <h3 class="features-place__entertainment-item-title">Жилье</h3>
           <p class="features-place__entertainment-item-about">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
@@ -56,13 +61,16 @@
           <p class="features-place__entertainment-item-about">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
         </div>
       </div>
+      </div>
     </section>
     <section class="features-bridge">
       <div class="features-bridge-wrap">
-        <div class="features-bridge__head">
-          <h2 class="features-bridge__title">Там есть мост дьявола</h2>
-          <span class="features-bridge__number-features">- №2 -</span>
-          <p class="features-bridge__about-features">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+        <div class="features-bridge__background">
+          <div class="features-bridge__head">
+            <h2 class="features-bridge__title">Там есть мост дьявола</h2>
+            <span class="features-bridge__number-features">- №2 -</span>
+            <p class="features-bridge__about-features">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          </div>
         </div>
         <div class="features-bridge__picture-layout">Каньон</div>
       </div>
