--- a/photo.html
+++ b/photo.html
@@ -7,31 +7,33 @@
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body class="photo-page">
     <header class="main-header">
-      <nav class="main-header__navigation main-header__navigation--opened">
-        <ul class="main-header__list">
-          <li class="main-header__item"><a class="main-header__item-link" href="index.html">Главная</a></li>
-          <li class="main-header__item"><a class="main-header__item-link">Фото и видео</a></li>
-          <li class="main-header__item"><a class="main-header__item-link" href="form.html">Форма отзыва</a></li>
-          <li class="main-header__item"><a class="main-header__item-link" href="#">HTML Academy</a></li>
-        </ul>
-        <button class="main-header__toggle" type="button">Закрыть</button>
-        <a class="main-header__logo-wrap">
-          <img class="main-header__logo" src="img/logo-sedona-mobile.svg" alt="City Sedona" width="102" height="83">
-        </a>
-      </nav>
-      <div class="main-header__promo-view promo__view">
+      <div class="main-header__wrap">
+        <nav class="main-header__navigation main-header__navigation--opened">
+          <ul class="main-header__list">
+            <li class="main-header__item"><a class="main-header__item-link" href="index.html">Главная</a></li>
+            <li class="main-header__item"><a class="main-header__item-link">Фото и видео</a></li>
+            <li class="main-header__item"><a class="main-header__item-link" href="form.html">Форма отзыва</a></li>
+            <li class="main-header__item"><a class="main-header__item-link" href="#">HTML Academy</a></li>
+          </ul>
+          <button class="main-header__toggle" type="button">Закрыть</button>
+          <a class="main-header__logo-wrap">
+            <img class="main-header__logo" src="img/logo-sedona-mobile.svg" alt="City Sedona" width="102" height="83">
+          </a>
+        </nav>
+        <div class="main-header__promo-view promo__view">
         <div class="promo-view__slogan-layout">
           <img class="promo-view__logo-title" src="img/text-sedona.svg" alt="Sedona" width="280" height="47">
         </div>
+      </div>
       </div>
     </header>
     <section class="media">
       <div class="media__wrap">
         <header class="media__head">
           <h1 class="media__title">Фото и видео</h1>
-          <p class="media__motivation">Не можете решиться на путешествия из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
+          <p class="media__motivation">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
         </header>
         <section class="media__photo photo">
           <div class="photo__wrap">
@@ -79,13 +81,14 @@
         </section>
         <section class="media__video video">
           <div class="video__text-wrap">
-            <h2 class="video__title">Ещё сомневаетесь?</h2>
+            <h2 class="video__title">Все еще сомневаетесь?</h2>
             <p class="video__about">Смотрите видеопрезентацию и скорееза билетами, пока они не подорожали в очередной раз!</p>
           </div>
           <div class="video__video-player">
             <div class="video__remote-layout">
-              <div class="video__remote-line"></div>
-              <div class="video__remote-dot"></div>
+              <div class="video__remote-line">
+                <div class="video__remote-dot"></div>
+              </div>
             </div>
             <div class="video__userbar-layout">
               <button class="video__replay" type="button">Видео сначала</button>
